--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="author" content="Fabian M" />
+    <meta name="language" content="english" />
+    <meta charset="utf-8" />
+    <meta name="robots" content="index, follow" />
+    <meta name="description" content="The Little Lemon Restaurant, a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
+    <!-- Open Graph Protocol -->
+    <meta name="og:title" content="Little Lemon Restaurant" />
+    <meta name="og:description" content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist." />
+    <meta name="og:type" content="website" />
+    <meta name="og:image" content="../src/images/Logo.svg" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon Restaurant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
