css styles and homepage

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,21 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="author" content="Fabian M" />
+    <meta name="author" content="FF MM" />
     <meta name="language" content="english" />
     <meta charset="utf-8" />
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="The Little Lemon Restaurant, a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
+    <meta
+      name="description"
+      content="The Little Lemon Restaurant, a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
+    />
+    <meta name="HandheldFriendly" content="true" />
     <!-- Open Graph Protocol -->
     <meta name="og:title" content="Little Lemon Restaurant" />
-    <meta name="og:description" content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist." />
+    <meta
+      name="og:description"
+      content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."
+    />
     <meta name="og:type" content="website" />
     <meta name="og:image" content="../src/images/Logo.svg" />
 
